crates/rules/src/snapshots/sprefa_rules__extractor__tests__extractor_json_deps.snap
---
source: crates/rules/src/extractor.rs
expression: refs
---
- value: 4.17.21
  span_start: 0
  span_end: 0
  kind: dep_version
  rule_name: npm-deps
  is_path: false
  parent_key: lodash
  node_path: dependencies/lodash/version
- value: 4.18.2
  span_start: 0
  span_end: 0
  kind: dep_version
  rule_name: npm-deps
  is_path: false
  parent_key: express
  node_path: dependencies/express/version
- value: express
  span_start: 0
  span_end: 0
  kind: dep_name
  rule_name: npm-deps
  is_path: false
  parent_key: ~
  node_path: dependencies/express/version
- value: lodash
  span_start: 0
  span_end: 0
  kind: dep_name
  rule_name: npm-deps
  is_path: false
  parent_key: ~
  node_path: dependencies/lodash/version
