crates/rules/src/snapshots/sprefa_rules__extractor__tests__extractor_yaml_helm.snap
---
source: crates/rules/src/extractor.rs
expression: refs
---
- value: myorg/frontend
  span_start: 0
  span_end: 0
  kind: image_repo
  rule_name: helm-images
  is_path: false
  parent_key: ~
  node_path: image
  group: 0
- value: v1.2.3
  span_start: 0
  span_end: 0
  kind: image_tag
  rule_name: helm-images
  is_path: false
  parent_key: myorg/frontend
  node_path: image
  group: 0
